prologin/prologin/static/css/prologin.css
/* ... */
.tt-suggestion {
  display: block;
  padding: 3px 20px;
}

.tt-suggestion.tt-cursor {
  color: #fff;
  background: #0081c2;
}

.tt-suggestion.tt-cursor > a {
  color: #fff;
}

.tt-suggestion.tt-selectable {
  cursor: pointer;
}

.tt-suggestion p {
  margin: 0;
}

.smaller {
  font-size: .8em;
}

.asteriskField {
  display: none;
}

/**
 * select2 with Bootstrap 3
 */
.select2-container--default .select2-selection--single {
  border: 1px solid #ccc !important;
  padding: 6px 12px !important;
  height: 34px !important;
  font-size: 14px;
  line-height: 1.42857143;
}

.select2-dropdown {
  border: 1px solid #ccc !important;
}

.select2-container--open .select2-dropdown--below {
  border-top: none !important;
}

.select2-container--open .select2-dropdown--above {
  border-bottom: none !important;
}

.select2-container .select2-selection--single .select2-selection__rendered {
  padding: 0 10px 0 0 !important; /* clear button */
}

.select2-container--default .select2-selection--single .select2-selection__rendered {
  line-height: inherit !important;
}

.select2-container--default .select2-selection--single .select2-selection__arrow {
  height: 34px !important;
}

.select2-container--default .select2-selection--single .select2-selection__arrow b {
  border-color: black transparent transparent transparent !important; /* down arrow color */
}

/**
 * DataTables with FontAwesome
 */

.dataTables_filter .clear-search {
  font-size: 0;
  width: 0;
  visibility: hidden;
  overflow: hidden;
}

.dataTables_filter .clear-search:after {
  color: #444;
  content: "\f00d";
  display: inline-block;
  font-family: FontAwesome;
  font-size: 15px;
  height: 30px;
  line-height: 30px;
  margin-right: 1em;
  position: absolute;
  right: 0;
  text-align: center;
  width: 2em;
  visibility: visible;
}

table.dataTable thead th {
  position: relative;
  background-image: none !important; /* Remove the DataTables bootstrap integration styling */
}

table.dataTable thead .sorting:after {
  opacity: initial !important;
}

table.dataTable thead th.sorting:after,
table.dataTable thead th.sorting_asc:after,
table.dataTable thead th.sorting_desc:after {
  position: absolute;
  bottom: 8px;
  right: 8px;
  display: block;
  font-family: FontAwesome;
}

table.dataTable thead th.sorting:after {
  content: "\f0dc";
  color: #ddd;
  font-size: 0.8em;
  padding-top: 0.12em;
}

table.dataTable thead th.sorting_asc:after {
  content: "\f0de";
}

table.dataTable thead th.sorting_desc:after {
  content: "\f0dd";
}

div.dataTables_scrollBody table.dataTable thead th.sorting:after,
div.dataTables_scrollBody table.dataTable thead th.sorting_asc:after,
div.dataTables_scrollBody table.dataTable thead th.sorting_desc:after {
  content: "";
}

table.table thead th.sorting:after,
table.table thead th.sorting_asc:after,
table.table thead th.sorting_desc:after {
  bottom: 8px;
}

table.table-noborder > tbody > tr > td {
  border: none;
}

table.table-align-middle > tbody > tr > td {
  vertical-align: middle;
}

/*
 * Sponsors
 */

.spons-logo {
    display: block;
    width: 100%;
    text-align : center;
}

.spons-logo > img {
    max-width: 100%;
    max-height: 10em;
}

@media (min-width: 1000px) {
  .row.equal {
    display: flex;
    flex-wrap: wrap;
  }
}

/*
 * Scoreboard
 */

.scoreboard-extra {
  text-align: right;
}

